# ArchiveVoice

./: .gitignore  ArchiveVoice.spec  README.md  Run Archive Voice.cmd  Run Archive Voice.command  pyproject.toml
.github/workflows/: build-macos-intel.yml
archive_voice/: __init__.py  __main__.py  constants.py  diarization.py  exporters.py  gui.py  models.py  runtime.py  transcriber.py
packaging/: README.md
packaging/assets/models/: README.md
packaging/scripts/: build_macos.sh  build_windows.ps1
tests/: test_exporters.py
