[project]
name = "archive-voice"
version = "0.1.0"
description = "Local desktop transcription for oral history, journalism and historical interviews."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "faster-whisper>=1.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
archive-voice = "archive_voice.__main__:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
